SERVER-15873 massert trace not needed when splitAndMove fails